added HTML and stylesheet file

--- a/index.html
+++ b/index.html
@@ -1,366 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!DOCTYPE html
-   PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd" >
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 
 <title>
-   Project Gutenberg presents the Illustrated e-book of Little Women 
-	 by Louisa M. Alcott.
+   Little Women, by Louisa May Alcott
 </title>
 <link rel="coverpage" href="images/cover.png" />
-<style type="text/css">
-
-body {
- margin-left: 10%;
- margin-right: 10%;
- /* font-size: 200%; optional set font size */
- }
-
-h1 {
- margin-top: 7%;
- text-indent: 0%;
- text-align: center;
- clear: both;
-}
-
-h2 {
- margin-top: 4%;
- text-indent: 0%;
- text-align: center;
- clear: both;
- visibility:hidden;
-}
-
-h3, h4 {
- text-indent: 0%;
- font-weight:bold;
- font-size:1.5em;
- text-align: center;
- clear: both;
- visibility:hidden;
-}
-
-/* paragraphs */
-
-p {
- margin-top: 3%;
- margin-bottom: 3%;
- text-align: justify;
- text-indent:3%;
-} /* general paragraph */
-
-p.h1 {
- margin-top: 7%;
- text-indent: 0%;
- text-align: center;
- font-size: 300%;
- font-weight: bold;
-}
-
-p.h2 {
- margin-top: 7%;
- text-indent: 0%;
- text-align: center;
- font-size: 150%;
- font-weight: bold;
-}
-
-p.h2a {
-  text-indent: 0%;
-  text-align: center;
-  font-size: 150%;
-  font-weight: bold;
-} /* h2 type without top margin */
-
-
-
-p.h3 {
- text-indent: 0%;
- font-weight:bold;
- font-size:1.5em;
- text-align: center;
-}
-
-p.cnobmargin {
- text-align: center;
- margin-bottom: 0;
- text-indent:0;
-} /* centered no bottom margin */
-
-p.cnomargins {
- text-align: center;
- margin-bottom: 0;
- margin-top: 0;
- text-indent:0;
-} /* centered no bottom or top margin */
-
-p.cnotmargin {
- text-align: center;
- margin-top: 0;
- text-indent:0;
-} /* centered no top margin */
-
-p.indent {
- text-indent: 4%;
-} /* indented paragraph */
-
-
-.bold  {font-weight:bold;}
-.smc {font-variant: small-caps;} /* Unindented Small Cap */
-
-/* horizontal rules */
-
-hr {
- width: 33%;
- margin-top: 8%;
- margin-bottom: 8%;
- margin-left: auto;
- margin-right: auto;
- clear: both;
-}
-hr.tiny {width:10%; margin:.5em 0;}
-hr.hr3  {width:90%; margin:.25em 0;}
-
-.hr2
-{
- width: 90%;
- max-width: 90%;
- color: #CCCCCC;
- background-color: #FFFFFF;
- border: none;
- border-bottom: 6px double black;
- margin: 8% auto;
-} /* horizontal rule for chapter divisions */
-
-/* tables */
-
-table  {margin:0 auto; max-width:28em;}
-table caption {text-align:center; font-weight:bold; 
-	             margin-bottom:.75em; 
-               font-family: Blackmoor LET, cursive;}
-table th      {font-size:small;}
-td            {vertical-align:top;}
-td:nth-child(1) {text-align:right; padding-right:.5em;}
-td:nth-child(2) {font-variant:small-caps; padding-right:.5em;}
-table td[colspan="3"]
-              {text-align:center; font-weight:bold; 
-	             padding:2.5em 0 .75em 0; 
-               font-family: Blackmoor LET, cursive;}
-table tr:nth-child(even) {background-color:rgba(240,225,200,.4);}
-table tr:hover {background-color:rgba(200,200,200,.4);}
-
-		
-table.witness {margin:0;}
-table.witness td:nth-child(1) {font-style:italic; padding-right:0;}
-table.witness td:nth-child(2) {font-variant:normal;
-                               font-size:2em; padding-right:0;}
-table.witness td:nth-child(3) {font-variant:small-caps;}
-
-table.illustrations {margin:0 auto; max-width:31em;}
-table.illustrations caption {font-weight:normal; font-family:initial;}
-table.illustrations td {vertical-align:top; text-align:left; font-variant:normal;}
-
-table.illustrations td[colspan="2"]
-              {text-align:right; font-style:italic;}
-
-
-.pagenum2         { right: 1%; font-size:x-small; background-color:inherit; color:gray;
-                         text-indent:0em; text-align:center; position:absolute;
-		/* To remove the page-numbers, use the hidden visibilty feature         */
-		/*                   visibility:hidden;                                  */  
-		                     border: 1px solid silver; padding: 1px 2px;  
-							           border-radius:5px; font-style:normal; 
-                         font-variant:normal; font-weight: normal; text-decoration: none;}
-
-
-blockquote {font-size: 97%; margin-left: 5%; margin-right: 5%;}
-		blockquote p { text-indent: 1em; margin-top: .25em; margin-bottom: .25em; }
-
-
-/* block quotes and notes */
-.blockquote {
- margin-left: 10%;
- margin-right: 10%;
-}
-
-.bbox  {margin:1.5em auto 0; 
-        border: solid 3px; padding:1em; max-width:20em;}
-p.book-description { text-indent: 0%; text-align: center;
-                    max-width:22em; margin:0 auto; }
-.center {
- text-indent: 0%;
- text-align: center;
-}
-.italic {font-style:italic;}
-.right {text-align: right;}
-
-.u {text-decoration: underline;}
-.caption {font-weight: bold;}
-.sm {font-size:small;}
-.no-space-bottom {margin-bottom:0;}
-.no-space-top {margin-top:0;}
-
-
-
-.letter-head1 {text-indent:-.5em; max-width:7em;
-          margin: 0 auto;} 
-.letter-trail1 {text-indent:-.5em; max-width:10em;
-          margin: 0 auto;} 
-/* Links attributes */
-
-a:link              { color:#000000; text-decoration: none; border-bottom: 1px dashed #808080;}
-a:visited           { color:#25383C; text-decoration: none; border-bottom: 1px dashed #808080;}
-a:hover             { color:#008000; text-decoration: none; border-bottom: 1px dashed #808080;}
-a:active            { color:#000000; text-decoration: none; border-bottom: 1px dashed #808080;}
-
-ins {text-decoration: none; border-bottom: 1px dashed #dcdcdc;}
-
-/* Images */
-
-img {
- padding: 6px;
-} /* without border */
-
-img.border{
- border: 1px solid black;
- padding: 6px;
-} /* with border */
-
-.figcenter {
- margin: auto;
- text-align: center;
-}
-
-.figleft {
- float: left;
- clear: left;
- margin-left: 0;
- margin-bottom: 4%;
- margin-top: 4%;
- margin-right: 4%;
- padding: 0;
- text-align: center;
-}
-
-.figright {
- float: right;
- clear: right;
- margin-left: 4%;
- margin-bottom: 4%;
- margin-top: 4%;
- margin-right: 0;
- padding: 0;
- text-align: center;
-}
-
-/* Other */
-.cursivecenter {
-  font-family: Blackmoor LET, cursive;
-  text-align: center;
-  text-indent: 0%;
-}
-
-.cursive {
-  font-family: Blackmoor LET, cursive;
-}
-
-
-div.tnote {
- border-style: dotted;
- margin-left: 8%;
- margin-right: 8%;
- padding: 1em;
- font-style: normal;
- font-size: 90%;
- text-align: justify;
-}
-div.tnote p{text-indent:0;}
-
-/* div.tnote p:nth-child(10,2) {background-color:rgba(240,225,220,.6);} */
-
-ul  {list-style-type:none;}
-
-
-/* Boilerplate classes         */
-	  div.boilerplate    { margin-top:1em; margin-bottom:1em;}  
-		div.boilerplate p  { text-indent:0em; margin-top:1em; margin-bottom:1em;}
-		div.boilerplate ul { margin:0 1em;; padding:0; list-style-type:disc;}  
-    div.boilerplate p.neat-left-margin
-		    { text-indent:0em; margin:0 0 0 2.5em;}
-
-/* poem classes, including indents */
-		div.poem1  {margin-left:3em;}
-		div.poem1 p {margin-top:0; margin-bottom:0;}
-.indent30                   { text-indent:-3em;} 
-.indent26                  {text-indent:-2.6em;}
-.indent28                  {text-indent:-2.8em;}
-.indent25									 { text-indent:-2.5em;}
-.indent22                  {text-indent:-2.2em;} 
-.indent20                  { text-indent:-2.0em;}
-.indent16									 { text-indent:-1.6em;}		
-.indent15									 { text-indent:-1.5em;}				
-.noindent                  {text-indent:0;}
-.left-indent10   {padding-left:10%}
-.left-indent15   {padding-left:15%}
-.left-indent20   {padding-left:20%}	
-.max-width30   {max-width:30em;}
-.max-width20   {max-width:20em;}
-.padd-right2em  {padding-right:2em;}
-.left-margin2em  {margin-left: 2em;}
-
-
-/* Coding under this group was originally complicated.  The idea
-   was to float the first part of each line to the left, and the
-	 next part to the right, while both remain on the same line.  
-	 However, the e-book converter doe not handle floats, or 
-	 inline-blocks, so the plans were scratched.               */   
-div.complicatedformatting {margin:0;}   /*grouping complicated formatting */
-div.complicatedformatting p {margin:0; text-indent:0} 
-
-.sig {text-align:right; max-width:20em; font-variant:small-caps;} 
-.sig2 {text-align:right; font-variant:small-caps; 
-       margin-bottom:0;}
-.clear          {clear:both;}			
-.sig-part1 {float:left; display:inline-block; text-indent:0;}
-.sig-part2 {float:right; display:inline-block;}
-
-
-/* lists for the four-page appendix of The Works of Louisa May Alcott   */
-
-ol {margin:.5em; padding:.5em;}
-ol li p {font-weight:normal; font-size:medium;}
-div#alcottContents dt, div#alcottLittleWomen dt,
-div#alcottStories dt, div#alcottCollections dt {font-weight:bold;}
-div#alcottStories dt, div#alcottCollections dt
-                         { font-size:1.1em; }
-div#alcottCollections dt { margin:.25em 0 0; padding:0;}
-div#alcottlittleWomen dt {margin:0; padding:0;}
-div#alcottLittleWomen dd {margin:0; padding:0;}
-div#alcottContent dt, div#alcottContent dd,
-div#alcottCollections dd, div#alcottStories dd  {margin:0; padding:0;}
-div#alcottCollections > ul li {font-weight:bold; font-size:large;}
-div#alcottCollections ul li ul li {font-weight:bold;
-                 margin:0; padding:0;}
-div#alcottStories p, div#alcottCollections p,
-div#alcottLittleWomen p, div#alcottContents p
-    {font-weight:normal; text-indent:0; margin:0; padding:0;}
-div#alcottContents > ul > li {padding-top:.25em;}
-div#alcottContents ul, div#alcottCollections ul, 
-div#alcottContents ul li, div#alcottCollections ul li,
-div#alcottContents ul li ul li, div#alcottCollections ul li ul li 
-   {padding:0; margin:0;}
-div#alcottContents li ul li, div#alcottCollections li ul li 
-   {font-weight:bold;}
-div#alcottLittleWomen li {font-size:1.1em;}
-.title {font-weight:bold; font-size:1.1em;}
-
-
-
-    </style>
+<link rel="stylesheet" href="/style.css">
   </head>
 <body>
 
